add booking system features, nix build, and nixos module
